footer sequence changed due to CSS not want to change text size. It's too large! Fixed now

--- a/style.css
+++ b/style.css
@@ -48,10 +48,15 @@ h5{
   font-weight: bolder;
 }
 
+h6{
+  font-size: 14pt;
+  font-family:'Merriweather', sans-serif;
+}
+
 p {
   font-family:'Merriweather', sans-serif;/*second font for body that is similar to what is already used to keep consistency*/
-font-size: 20pt;    
-font-weight: 900;
+  font-size: 20pt;    
+  font-weight: 900;
 }
 
 /*End of in body elements and attributes*/
@@ -103,6 +108,7 @@ nav {
 /*Beginning of Footer*/
 
 footer {
+  line-height: 30%;;
   text-align: center;
   grid-column:1/5;
   margin: 0 auto;
@@ -111,7 +117,7 @@ footer {
   color: black;
 }
 
-footer .wrapper {
+footer .wrapper { 
   width:100%;
   margin:auto;
   padding:10px;
